feat: add clerk auth

--- a/.env-e
+++ b/.env-e
@@ -4,6 +4,10 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/db"
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="foo"
+CLERK_SECRET_KEY="bar"
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
